kubernetes/config/db.yml
#@ load("@ytt:data", "data")
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: db
  labels:
    app.kubernetes.io/component: db
  annotations:
    kapp.k14s.change-group: filer.dmaze.github.io/db
spec:
  selector:
    matchLabels:
      app.kubernetes.io/component: db
  serviceName: db-headless
  replicas: #@ data.values.db.replicas
  template:
    metadata:
      labels:
        app.kubernetes.io/component: db
    spec:
      containers:
        - name: db
          image: postgres:16
          volumeMounts:
            - name: data
              mountPath: /var/lib/postgresql/data
          ports:
            - name: postgres
              containerPort: 5432
  volumeClaimTemplates:
    - metadata:
        name: data
      spec:
        accessModes:
          - ReadWriteOnce
        resources:
          requests:
            storage: #@ data.values.db.capacity
---
apiVersion: v1
kind: Service
metadata:
  name: db-headless
  labels:
    app.kubernetes.io/component: db
spec:
  selector:
    app.kubernetes.io/component: db
  clusterIP: None
  ports:
    - name: postgres
      port: 5432
      targetPort: postgres
---
apiVersion: v1
kind: Service
metadata:
  name: db
  labels:
    app.kubernetes.io/component: db
spec:
  selector:
    app.kubernetes.io/component: db
  ports:
    - name: postgres
      port: 5432
      targetPort: postgres
