kubernetes/config/index.yml
#@ load("@ytt:data", "data")
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: index
  labels:
    app.kubernetes.io/component: index
  annotations:
    kapp.k14s.io/change-rule.migration: upsert after upserting filer.dmaze.github.io/migration
spec:
  selector:
    matchLabels:
      app.kubernetes.io/component: index
  replicas: #@ data.values.index.replicas
  template:
    metadata:
      labels:
        app.kubernetes.io/component: index
    spec:
      containers:
        - name: index
          image: filer-index
---
apiVersion: v1
kind: Service
metadata:
  name: index
  labels:
    app.kubernetes.io/component: index
spec:
  selector:
    app.kubernetes.io/component: index
  clusterIP: None
