kubernetes/config/store.yml
#@ load("@ytt:data", "data")
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: store
  labels:
    app.kubernetes.io/component: store
  annotations:
    kapp.k14s.io/change-rule.migration: upsert after upserting filer.dmaze.github.io/migration
spec:
  selector:
    matchLabels:
      app.kubernetes.io/component: store
  serviceName: store
  podManagementPolicy: Parallel
  replicas: #@ data.values.store.replicas
  template:
    metadata:
      labels:
        app.kubernetes.io/component: store
    spec:
      containers:
        - name: store
          image: filer-store
          volumeMounts:
            - name: data
              mountPath: /store
  volumeClaimTemplates:
    - metadata:
        name: data
      spec:
        accessModes:
          - ReadWriteOnce
        resources:
          requests:
            storage: #@ data.values.store.capacity
---
apiVersion: v1
kind: Service
metadata:
  name: store
  labels:
    app.kubernetes.io/component: store
spec:
  selector:
    app.kubernetes.io/component: store
  clusterIP: None
