kubernetes/config/web.yml
#@ load("@ytt:data", "data")
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web
  labels:
    app.kubernetes.io/component: web
  annotations:
    kapp.k14s.io/change-rule.migration: upsert after upserting filer.dmaze.github.io/migration
spec:
  selector:
    matchLabels:
      app.kubernetes.io/component: web
  replicas: #@ data.values.web.replicas
  template:
    metadata:
      labels:
        app.kubernetes.io/component: web
    spec:
      containers:
        - name: web
          image: filer-web
          ports:
            - name: http
              containerPort: 4000
---
apiVersion: v1
kind: Service
metadata:
  name: web
  labels:
    app.kubernetes.io/component: web
spec:
  selector:
    app.kubernetes.io/component: web
  ports:
    - name: http
      port: 80
      targetPort: http
---
apiVersion: v1
kind: Service
metadata:
  name: web-headless
  labels:
    app.kubernetes.io/component: web
spec:
  selector:
    app.kubernetes.io/component: web
  clusterIP: None
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web
  labels:
    app.kubernetes.io/component: web
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: 32m
spec:
  ingressClassName: #@ data.values.ingress.className
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: web
                port:
                  name: http
